vehicles: fix vehicle api

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ GOOGLE_CLIENT_SECRET="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"
 
 GOOGLE_MAIL_USER="adil.qqsd@gmail.com"
 GOOGLE_MAIL_PASS="xnii lpqd scak gqtdl"
+
+
+NEXT_PUBLIC_BACKEND_URL="http://localhost:8080"
