--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trip",
+  "name": "grhmi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18"
   },
